HTTP_Routing/2.28_HTTPCORS_OriginsMethods/gw-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: http-gw
  namespace: web
spec:
  gatewayClassName: f5-bnk-gateway-class

  addresses:
    - type: IPAddress
      value: 40.30.20.20

  listeners:
    - name: bnk-listener
      protocol: HTTP
      port: 80

      allowedRoutes:
        namespaces:
          from: All

        kinds:
          - kind: HTTPRoute

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cors-origins-methods-route
  namespace: web
spec:
  parentRefs:
    - name: http-gw
      sectionName: bnk-listener

  hostnames:
    - coffee.f5bnk.com


  rules:
    - filters:
        - type: CORS
          cors:
            allowOrigins:
              - https://shop.f5bnk.com
              - https://*.f5bnk.com
            allowMethods:
              - GET
              - POST
              - OPTIONS

      backendRefs:
        - name: coffee-pool
          kind: Pool
          group: k8s.f5net.com
